--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Contest Standings",
 	"short_name": "Contest Standings",
-	"version": "3.1.3",
+	"version": "3.2.1",
 	"description": "Shows standings with updated names from codeforces",
 
 	"manifest_version": 2,
@@ -26,7 +26,7 @@
 	[{
 		"js": ["include.js", "third_party/jquery.js", "updateStandings.js"],
 		"css": ["styles.css"],
-		"matches": ["http://*.snarknews.info/*", "http://opencup.ru/*", "https://official.contest.yandex.ru/*"]
+		"matches": ["http://*.snarknews.info/*", "http://opencup.ru/*", "https://official.contest.yandex.ru/*", "https://official.contest.yandex.com/*"]
 	}],
 
 	"background":
