--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Contest Standings",
 	"short_name": "Contest Standings",
-	"version": "3.2.7",
+	"version": "3.3.1",
 	"description": "Shows standings with updated names from codeforces",
 
 	"manifest_version": 2,
@@ -33,7 +33,8 @@
             "https://official.contest.yandex.com/*", 
             "https://contest.yandex.ru/*",
             "https://contest.yandex.com/*",
-            "http://opentrains.mipt.ru/*"]
+            "http://opentrains.mipt.ru/*",
+            "file:///D:/User/Downloads/*"]
 	}],
 
 	"background":
